--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -2,9 +2,10 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    background-color: antiquewhite;
+    height: 100%;
     justify-content: center;
     align-items: center;
+    flex-grow: 1;
 }
 
 .Card h2{
@@ -28,7 +29,7 @@
 
 .CardIncorrect{
     height:2rem;
-    color: red;
+    color: #ff7070;
     display: flex;
     padding: 2rem 0;
 }
